Attempt to fix various errors

--- a/benchmark/build.gradle
+++ b/benchmark/build.gradle
@@ -4,16 +4,17 @@ apply plugin: 'androidx.benchmark'
 android {
     signingConfigs {
         release {
-            storeFile file('E:/Business/new.keystore')
-            storePassword 'Leslie22557799'
-            keyAlias 'zak'
-            keyPassword 'Leslie22557799'
+            storeFile file("${keystorelocation}")
+            storePassword "${keystorepassword}"
+            keyAlias "${keyname}"
+            keyPassword "${keypassword}"
         }
     }
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
@@ -23,6 +24,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.benchmark.junit4.AndroidBenchmarkRunner"
         testInstrumentationRunnerArgument 'androidx.benchmark.suppressErrors', 'EMULATOR,LOW_BATTERY,ACTIVITY-MISSING,UNLOCKED'
@@ -49,4 +51,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.benchmark:benchmark-junit4:1.1.0-alpha01'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
 }
