UI tests all work in UI 9.0

--- a/benchmark/build.gradle
+++ b/benchmark/build.gradle
@@ -35,8 +35,8 @@ android {
         debug {
             // Since debuggable can"t be modified by gradle for library modules,
             // it must be done in a manifest - see src/androidTest/AndroidManifest.xml
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "benchmark-proguard-rules.pro"
+            //minifyEnabled true
+            //proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "benchmark-proguard-rules.pro"
         }
         release {
             isDefault = true
